fix demo btn spacing, photo-nav

--- a/less/components/navbar.less
+++ b/less/components/navbar.less
@@ -57,6 +57,7 @@ body {
   .transition( 0.5s, ease-in-out );
   .transition-property( opacity );
   .opacity(1);
+  margin-left: 12px;
 }
 
 .navbar.hide-demo-btn .btn-request-demo {
