--- a/less/components/photo-viewer.less
+++ b/less/components/photo-viewer.less
@@ -19,7 +19,7 @@
   position: relative;
 }
 
-.photo-viewer .photo-viewer .photo-nav {
+.photo-viewer .photo-nav {
   position: absolute;
   top: 100px;
   right: 0;
